# position-engine

./: .gitignore  README.md  cli.py  dummy_price.csv  faulty_trades_test.json  load_trades.py  main.py  position_report.csv  price_providers.py  pyproject.toml  risk_report.csv  trade_aggregator.py
tests/: test_trade_aggregation.py  test_trade_ingestion.py
tests/data/: trades.json
