[project]
name = "position-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pandas>=3.0.2",
    "rich>=14.3.3",
    "typer>=0.24.1",
]

[dependency-groups]
dev = [
    "mypy>=1.20.0",
    "pandas>=3.0.2",
    "pytest>=9.0.2",
    "ruff>=0.15.9",
]

[tool.ruff]
line-length = 88          # same default as Black
target-version = "py314"  # match your requires-python

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors — basic style errors (indentation, whitespace, etc.)
    "W",    # pycodestyle warnings — line length, blank lines, etc.
    "F",    # pyflakes — undefined names, unused imports, unused variables
    "B",    # flake8-bugbear — likely bugs and design issues, includes B006
    "I",    # isort — import ordering and grouping
    "UP",   # pyupgrade — flags outdated Python syntax (e.g. old-style string formatting)
    "C4",   # flake8-comprehensions — unnecessary list/dict/set comprehensions
    "SIM",  # flake8-simplify — suggests simpler code constructs
    "N",    # pep8-naming — naming conventions (classes, functions, variables)
]

[tool.pytest.ini_options]
pythonpath = ["."]